2005-03-14  Bruno Haible  <bruno@clisp.org>

	* gettext-0.14.3 released.

2005-03-12  Bruno Haible  <bruno@clisp.org>

	* po.m4 (AM_PO_SUBDIRS, AM_POSTPROCESS_PO_MAKEFILE): In the LINGUAS
	file, ignore also comments that don't start in column 0.

2005-03-12  Bruno Haible  <bruno@clisp.org>

	* gettext.m4 (AM_GNU_GETTEXT): Fix quoting bug. Fixes an endless loop
	of 'aclocal' when a configure.ac contains two invocations of
	AM_GNU_GETTEXT.

2005-03-11  Bruno Haible  <bruno@clisp.org>

	* gettext.m4 (AM_GNU_GETTEXT): CATOBJEXT and INTLOBJS default to empty.
	Reported by Stepan Kasal <kasal@ucw.cz>.

2005-03-07  Bruno Haible  <bruno@clisp.org>

	* po.m4: Add comments.

2005-03-05  Bruno Haible  <bruno@clisp.org>

	* nls.m4: Require autoconf >= 2.50.
	(AM_MKINSTALLDIRS): Use AC_REQUIRE_AUX_FILE conditionally.

2005-02-24  Bruno Haible  <bruno@clisp.org>

	* gettext-0.14.2 released.

2005-01-29  Bruno Haible  <bruno@clisp.org>

	* gettext.m4 (gt_INTL_MACOSX): New macro, extracted from
	AM_INTL_SUBDIR. Set INTL_MACOSX_LIBS instead of INTL_MACOSX_LDFLAGS.
	(AM_GNU_GETTEXT): Invoke it. Add the INTL_MACOSX_LIBS contents to
	LIBINTL and LTLIBINTL.
	(AM_INTL_SUBDIR): Require gt_INTL_MACOSX.

2005-01-19  Bruno Haible  <bruno@clisp.org>

	* ansi-c++.m4, codeset.m4, gettext.m4, glibc21.m4, glibc2.m4, iconv.m4:
	* intdiv0.m4, intmax.m4, inttypes_h.m4, inttypes.m4, inttypes-pri.m4:
	* isc-posix.m4, lcmessage.m4, longdouble.m4, longlong.m4, nls.m4:
	* po.m4, printf-posix.m4, progtest.m4, signed.m4, size_max.m4:
	* stdint_h.m4, uintmax_t.m4, ulonglong.m4, wchar_t.m4, wint_t.m4:
	* xsize.m4:
	Use an all-permissive copyright notice, recommended by RMS.

2005-01-10  Bruno Haible  <bruno@clisp.org>

	* gettext.m4 (AM_GNU_GETTEXT): Declare _nl_expand_alias with an
	argument.
	Reported by Mark A. Wicks <mwicks@kettering.edu> and
	Vaclav Haisman <V.Haisman@sh.cvut.cz>.

2005-01-08  Bruno Haible  <bruno@clisp.org>

	* progtest.m4: Require autoconf >= 2.50.