@@ -1,3 +1,9 @@
+2005-04-06  Bruno Haible  <bruno@clisp.org>
+
+	* gettext.m4 (AM_GNU_GETTEXT): Don't use a cast from 'char *' to 'int',
+	since it's not valid in C++ on 64-bit machines.
+	Reported by Mads Martin Joergensen <mmj@suse.de>.
+
 2005-03-14  Bruno Haible  <bruno@clisp.org>
 
 	* gettext-0.14.3 released.
